Added services icon

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -112,12 +112,6 @@ table.commiters
 dl
   margin-bottom: 8px
 
-  &.nicknames
-    dt
-      background: url(/images/nicknames_icon.png) no-repeat
-    dt, dd
-      //display: inline-block
-
   dt
     color: $subtitle
     font-size: 14px
@@ -128,6 +122,10 @@ dl
 
   dd
     margin-bottom: 15px
+
+  &.nicknames
+    dt
+      background: url(/images/nicknames_icon.png) no-repeat
 
   &.sites
 
@@ -143,6 +141,10 @@ dl
         font-size: 14px
         list-style: circle
         margin-left: 10px
+
+  &.services
+    dt
+      background: url(/images/services_icon.png) no-repeat
 
 ul.services
   margin-top: 5px
