--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -225,20 +225,21 @@ dl dt {
 /* line 123, ../../app/stylesheets/master.sass */
 dl dd {
   margin-bottom: 15px;
+  padding-left: 18px;
 }
-/* line 127, ../../app/stylesheets/master.sass */
+/* line 128, ../../app/stylesheets/master.sass */
 dl.nicknames dt {
   background: url(/images/nicknames_icon.png) no-repeat;
 }
-/* line 132, ../../app/stylesheets/master.sass */
+/* line 133, ../../app/stylesheets/master.sass */
 dl.sites dt {
   background: url(/images/sites_icon.png) no-repeat;
 }
-/* line 135, ../../app/stylesheets/master.sass */
+/* line 136, ../../app/stylesheets/master.sass */
 dl.sites ul {
   margin-left: 10px;
 }
-/* line 138, ../../app/stylesheets/master.sass */
+/* line 139, ../../app/stylesheets/master.sass */
 dl.sites ul li {
   margin-bottom: 5px;
   line-height: 18px;
@@ -246,22 +247,22 @@ dl.sites ul li {
   list-style: circle;
   margin-left: 10px;
 }
-/* line 146, ../../app/stylesheets/master.sass */
+/* line 147, ../../app/stylesheets/master.sass */
 dl.services dt {
   background: url(/images/services_icon.png) no-repeat;
 }
 
-/* line 149, ../../app/stylesheets/master.sass */
+/* line 150, ../../app/stylesheets/master.sass */
 ul.services {
   margin-top: 5px;
 }
-/* line 152, ../../app/stylesheets/master.sass */
+/* line 153, ../../app/stylesheets/master.sass */
 ul.services li {
   float: left;
   margin-right: 8px;
 }
 
-/* line 156, ../../app/stylesheets/master.sass */
+/* line 157, ../../app/stylesheets/master.sass */
 .ruby-powered {
   text-align: center;
   padding: 80px 0;
