--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag :all %>
 </head>
