updating the year

--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <%= yield %>
 
   <div id="footer">
-    &copy; 2011 RubyCommitters.org <br/>
+    &copy; <%= Time.now.year %> RubyCommitters.org <br/>
     inspired by _why
   </div>
 
